ObjectOrientedScripting/Compiler/Parser.cs
using Compiler.OOS_LanguageObjects;



using System;



public class Parser {
	public const int _EOF = 0;
	public const int _T_SCALAR = 1;
	public const int _T_STRING = 2;
	public const int _T_IDENT = 3;
	public const int _T_TERMINATOR = 4;
	public const int _T_EXPOP = 5;
	public const int _T_ASSIGNMENTCHAR = 6;
	public const int _T_ROUNDBRACKETOPEN = 7;
	public const int _T_ROUNDBRACKETCLOSE = 8;
	public const int _T_CODEBRACKETOPEN = 9;
	public const int _T_CODEBRACKETCLOSE = 10;
	public const int maxT = 49;

	const bool _T = true;
	const bool _x = false;
	const int minErrDist = 2;
	
	public Scanner scanner;
	public Errors  errors;

	public Token t;    // last recognized token
	public Token la;   // lookahead token
	int errDist = minErrDist;



	private Base baseObject;
	public Base BaseObject { get { return baseObject; } }
	
	public Parser(Scanner scanner) {
		this.scanner = scanner;
		errors = new Errors();
		baseObject = null;
	}
	
	bool peekCompare(params int[] values)
	{
		Token t = la;
		foreach(int i in values)
		{
			if(i != -1 && t.kind != i)
			{
				scanner.ResetPeek();
				return false;
			}
            if (t.next == null)
                t = scanner.Peek();
            else
                t = t.next;
		}
        scanner.ResetPeek();
		return true;
	}
	
	
	void SynErr (int n) {
		if (errDist >= minErrDist) errors.SynErr(la.line, la.col, n);
		errDist = 0;
	}

	public void SemErr (string msg) {
		if (errDist >= minErrDist) errors.SemErr(t.line, t.col, msg);
		errDist = 0;
	}
	
	void Get () {
		for (;;) {
			t = la;
			la = scanner.Scan();
			if (la.kind <= maxT) { ++errDist; break; }

			la = t;
		}
	}
	
	void Expect (int n) {
		if (la.kind==n) Get(); else { SynErr(n); }
	}
	
	bool StartOf (int s) {
		return set[s, la.kind];
	}
	
	void ExpectWeak (int n, int follow) {
		if (la.kind == n) Get();
		else {
			SynErr(n);
			while (!StartOf(follow)) Get();
		}
	}


	bool WeakSeparator(int n, int syFol, int repFol) {
		int kind = la.kind;
		if (kind == n) {Get(); return true;}
		else if (StartOf(repFol)) {return false;}
		else {
			SynErr(n);
			while (!(set[syFol, kind] || set[repFol, kind] || set[0, kind])) {
				Get();
				kind = la.kind;
			}
			return StartOf(syFol);
		}
	}

	
	void TERMINATOR() {
		Expect(4);
		while (la.kind == 4) {
			Get();
		}
	}

	void IDENT(out pBaseLangObject outObj, pBaseLangObject parent) {
		Expect(3);
		var obj = new Ident(parent, t.val, t.line, t.col); outObj = obj;
	}

	void ENCAPSULATION(out Encapsulation e) {
		e = Encapsulation.NA; 
		if (la.kind == 11) {
			Get();
			e = Encapsulation.Public; 
		} else if (la.kind == 12) {
			Get();
			e = Encapsulation.Private; 
		} else if (la.kind == 13) {
			Get();
			e = Encapsulation.Protected; 
		} else SynErr(50);
	}

	void VARTYPE(out VarType e) {
		e = VarType.Void; 
		switch (la.kind) {
		case 14: {
			Get();
			e = VarType.Scalar; 
			break;
		}
		case 15: {
			Get();
			e = VarType.Scalar; 
			break;
		}
		case 16: {
			Get();
			e = VarType.Scalar; 
			break;
		}
		case 17: {
			Get();
			e = VarType.Scalar; 
			break;
		}
		case 18: {
			Get();
			e = VarType.Bool; 
			break;
		}
		case 19: {
			Get();
			e = VarType.String; 
			break;
		}
		case 20: {
			Get();
			e = VarType.Object; 
			break;
		}
		default: SynErr(51); break;
		}
	}

	void BOOLEAN(out bool flag) {
		flag = la.val == "true"; Get(); return; 
		if (la.kind == 21) {
			Get();
			flag = true; 
		} else if (la.kind == 22) {
			Get();
			flag = false; 
		} else SynErr(52);
	}

	void VALUE(out pBaseLangObject outObj, pBaseLangObject parent) {
		var obj = new Value(parent); outObj = obj; outObj = obj; pBaseLangObject blo; bool flag; 
		if (la.kind == 2) {
			Get();
			obj.varType = VarType.String; obj.value = t.val; 
		} else if (la.kind == 1) {
			Get();
			obj.varType = VarType.Scalar; obj.value = t.val; 
		} else if (la.val == "true" || la.val == "false") {
			BOOLEAN(out flag);
			obj.varType = VarType.Bool; obj.value = (flag ? "true" : "false"); 
		} else if (la.kind == 21 || la.kind == 22) {
			BOOLEAN(out flag);
			obj.varType = VarType.Bool; obj.value = (flag ? "true" : "false"); 
		} else SynErr(53);
	}

	void EXPRESSION_HELPER(out pBaseLangObject outObj, pBaseLangObject parent) {
		var obj = new Expression(parent); outObj = obj; pBaseLangObject blo; pBaseLangObject blo2; 
		if (la.kind == 23) {
			Get();
			obj.negate = true; 
		}
		if (la.kind == 36) {
			OP_NEWINSTANCE(out blo, obj);
			obj.lExpression = blo; 
		} else if (la.val == "true" || la.val == "false" ) {
			VALUE(out blo, obj);
			obj.lExpression = blo; 
		} else if (StartOf(1)) {
			VALUE(out blo, obj);
			obj.lExpression = blo; 
		} else if (la.kind == 3) {
			IDENT(out blo, obj);
			obj.lExpression = blo; 
			if (la.kind == 7) {
				BODY_FUNCTIONCALL(out blo2, blo);
				blo.addChild(blo2); 
			}
		} else if (la.kind == 48) {
			OP_SQFCALL(out blo, obj);
			obj.lExpression = blo; 
		} else SynErr(54);
		while (la.kind == 5 || la.kind == 24 || la.kind == 25) {
			if (la.kind == 24) {
				Get();
				obj.expOperator = t.val; 
			} else if (la.kind == 25) {
				Get();
				obj.expOperator = t.val; 
			} else {
				Get();
				obj.expOperator = t.val; 
				EXPRESSION(out blo, obj);
				obj.rExpression = blo; 
			}
		}
	}

	void OP_NEWINSTANCE(out pBaseLangObject outObj, pBaseLangObject parent) {
		var obj = new NewInstance(parent); outObj = obj; pBaseLangObject blo; pBaseLangObject blo2; 
		Expect(36);
		IDENT(out blo, obj);
		obj.addChild(blo); 
		BODY_FUNCTIONCALL(out blo2, blo);
		blo.addChild(blo2); 
	}

	void BODY_FUNCTIONCALL(out pBaseLangObject outObj, pBaseLangObject parent) {
		var obj = new FunctionCall(parent); outObj = obj; pBaseLangObject blo; 
		Expect(7);
		if (StartOf(2)) {
			EXPRESSION(out blo, obj);
			obj.addChild(blo); 
			while (la.kind == 30) {
				Get();
				EXPRESSION(out blo, obj);
				obj.addChild(blo); 
			}
		}
		Expect(8);
	}

	void OP_SQFCALL(out pBaseLangObject outObj, pBaseLangObject parent) {
		var obj = new SqfCall(parent); outObj = obj; pBaseLangObject blo; 
		Expect(48);
		if (la.kind == 7) {
			Get();
			while (StartOf(2)) {
				EXPRESSION(out blo, obj);
				obj.addChild(blo); 
			}
			Expect(8);
		}
		IDENT(out blo, outObj);
		try{ obj.Name = (Ident)blo;} catch (Exception ex) { SemErr(ex.Message); } 
		if (la.kind == 7) {
			Get();
			obj.markEnd(); 
			while (StartOf(2)) {
				EXPRESSION(out blo, obj);
				obj.addChild(blo); 
			}
			Expect(8);
		}
	}

	void EXPRESSION(out pBaseLangObject outObj, pBaseLangObject parent) {
		outObj = null; 
		if (la.kind == 7) {
			Get();
			EXPRESSION_HELPER(out outObj, parent);
			Expect(8);
		} else if (StartOf(3)) {
			EXPRESSION_HELPER(out outObj, parent);
		} else SynErr(55);
	}

	void OOS() {
		var obj = new Base(); baseObject = obj; pBaseLangObject blo; 
		while (StartOf(4)) {
			if (la.kind == 27) {
				NAMESPACE(out blo, obj);
				obj.addChild(blo); 
			} else if (la.kind == 28) {
				CLASS(out blo, obj);
				obj.addChild(blo); 
			} else if (la.kind == 31) {
				INTERFACE(out blo, obj);
				obj.addChild(blo); 
			} else {
				Get();
				if (peekCompare(-1, -1, _T_TERMINATOR) ) {
					NEWVARIABLE(out blo, obj, Encapsulation.Static);
					obj.addChild(blo); 
				} else if (StartOf(5)) {
					FUNCTION(out blo, obj, Encapsulation.Static);
					obj.addChild(blo); 
				} else SynErr(56);
			}
		}
	}

	void NAMESPACE(out pBaseLangObject outObj, pBaseLangObject parent) {
		var obj = new Namespace(parent); outObj = obj; pBaseLangObject blo; 
		Expect(27);
		IDENT(out blo, obj);
		try{ obj.Name = (Ident)blo;} catch (Exception ex) { SemErr(ex.Message); } 
		Expect(9);
		while (StartOf(4)) {
			if (la.kind == 27) {
				NAMESPACE(out blo, obj);
				obj.addChild(blo); 
			} else if (la.kind == 28) {
				CLASS(out blo, obj);
				obj.addChild(blo); 
			} else if (la.kind == 31) {
				INTERFACE(out blo, obj);
				obj.addChild(blo); 
			} else {
				Get();
				if (peekCompare(-1, -1, _T_TERMINATOR) ) {
					NEWVARIABLE(out blo, obj, Encapsulation.Static);
					obj.addChild(blo); 
				} else if (StartOf(5)) {
					FUNCTION(out blo, obj, Encapsulation.Static);
					obj.addChild(blo); 
				} else SynErr(57);
			}
		}
		Expect(10);
	}

	void CLASS(out pBaseLangObject outObj, pBaseLangObject parent) {
		var obj = new oosClass(parent); outObj = obj; pBaseLangObject blo; Encapsulation e = Encapsulation.Private; 
		Expect(28);
		IDENT(out blo, obj);
		try{ obj.Name = (Ident)blo;} catch (Exception ex) { SemErr(ex.Message); } 
		if (la.kind == 29) {
			Get();
			IDENT(out blo, obj);
			obj.addParentClass(blo); 
			while (la.kind == 30) {
				Get();
				IDENT(out blo, obj);
				obj.addParentClass(blo); 
			}
		}
		Expect(9);
		while (StartOf(6)) {
			if (StartOf(7)) {
				if (la.kind == 11 || la.kind == 12 || la.kind == 13) {
					ENCAPSULATION(out e);
				} else {
					Get();
					e = Encapsulation.Static; 
				}
			}
			if (peekCompare(-1, -1, _T_TERMINATOR) ) {
				NEWVARIABLE(out blo, obj, e);
				obj.addChild(blo); 
				TERMINATOR();
			} else if (peekCompare(_T_IDENT, _T_ROUNDBRACKETOPEN) ) {
				CONSTRUCTOR(out blo, obj, e);
				obj.addChild(blo); 
			} else if (StartOf(5)) {
				FUNCTION(out blo, obj, e);
				obj.addChild(blo); 
			} else SynErr(58);
		}
		Expect(10);
	}

	void INTERFACE(out pBaseLangObject outObj, pBaseLangObject parent) {
		var obj = new oosInterface(parent); outObj = obj; pBaseLangObject blo; 
		Expect(31);
		IDENT(out blo, obj);
		obj.Name = (Ident)blo; 
		Expect(9);
		while (StartOf(5)) {
			VFUNCTION(out blo, obj);
			obj.addChild(blo); 
		}
		Expect(10);
	}

	void NEWVARIABLE(out pBaseLangObject outObj, pBaseLangObject parent, Encapsulation e = Encapsulation.NA) {
		var obj = new Variable(parent, la.col, la.line); obj.encapsulation = e; outObj = obj; pBaseLangObject blo; VarType v; 
		if (StartOf(8)) {
			VARTYPE(out v);
			obj.varType = new VarTypeObject(v);; 
		} else if (la.kind == 3) {
			IDENT(out blo, obj);
			obj.varType = new VarTypeObject((Ident)blo); 
		} else SynErr(59);
		IDENT(out blo, obj);
		try{ obj.Name = (Ident)blo;} catch (Exception ex) { SemErr(ex.Message); } 
	}

	void FUNCTION(out pBaseLangObject outObj, pBaseLangObject parent, Encapsulation e) {
		var obj = new Function(parent); obj.encapsulation = e; outObj = obj; pBaseLangObject blo; VarType v; 
		if (StartOf(8)) {
			VARTYPE(out v);
			obj.varType = new VarTypeObject(v); 
		} else if (la.kind == 32) {
			Get();
			obj.varType = new VarTypeObject(VarType.Void); 
		} else if (la.kind == 3) {
			IDENT(out blo, obj);
			obj.varType = new VarTypeObject((Ident)blo); 
		} else SynErr(60);
		IDENT(out blo, obj);
		try{ obj.Name = (Ident)blo;} catch (Exception ex) { SemErr(ex.Message); } 
		Expect(7);
		if (StartOf(9)) {
			NEWVARIABLE(out blo, obj);
			obj.addChild(blo); 
			while (la.kind == 30) {
				Get();
				NEWVARIABLE(out blo, obj);
				obj.addChild(blo); 
			}
		}
		Expect(8);
		obj.markArgListEnd(); 
		Expect(9);
		while (StartOf(10)) {
			CODEINSTRUCTION(out blo, obj);
			obj.addChild(blo); 
		}
		Expect(10);
	}

	void CONSTRUCTOR(out pBaseLangObject outObj, pBaseLangObject parent, Encapsulation e) {
		var obj = new Function(parent); obj.encapsulation = e; outObj = obj; pBaseLangObject blo; VarType v; 
		IDENT(out blo, obj);
		try{ obj.Name = (Ident)blo;} catch (Exception ex) { SemErr(ex.Message); } 
		Expect(7);
		if (StartOf(9)) {
			NEWVARIABLE(out blo, obj);
			obj.addChild(blo); 
			while (la.kind == 30) {
				Get();
				NEWVARIABLE(out blo, obj);
				obj.addChild(blo); 
			}
		}
		Expect(8);
		obj.markArgListEnd(); 
		Expect(9);
		while (StartOf(10)) {
			CODEINSTRUCTION(out blo, obj);
			obj.addChild(blo); 
		}
		Expect(10);
	}

	void VFUNCTION(out pBaseLangObject outObj, pBaseLangObject parent) {
		var obj = new VirtualFunction(parent); outObj = obj; pBaseLangObject blo; VarType v; 
		if (StartOf(8)) {
			VARTYPE(out v);
			obj.varType = new VarTypeObject(v); 
		} else if (la.kind == 32) {
			Get();
			obj.varType = new VarTypeObject(VarType.Void); 
		} else if (la.kind == 3) {
			IDENT(out blo, obj);
			obj.varType = new VarTypeObject((Ident)blo); 
		} else SynErr(61);
		IDENT(out blo, obj);
		try{ obj.Name = (Ident)blo;} catch (Exception ex) { SemErr(ex.Message); } 
		Expect(7);
		if (StartOf(9)) {
			if (StartOf(8)) {
				VARTYPE(out v);
				obj.argTypes.Add(new VarTypeObject(v)); 
			} else {
				IDENT(out blo, obj);
				obj.argTypes.Add(new VarTypeObject((Ident)blo)); 
			}
			while (la.kind == 30) {
				Get();
				if (StartOf(8)) {
					VARTYPE(out v);
					obj.argTypes.Add(new VarTypeObject(v)); 
				} else if (la.kind == 3) {
					IDENT(out blo, obj);
					obj.argTypes.Add(new VarTypeObject((Ident)blo)); 
				} else SynErr(62);
			}
		}
		Expect(8);
		TERMINATOR();
	}

	void CODEINSTRUCTION(out pBaseLangObject outObj, pBaseLangObject parent) {
		outObj = null; 
		if (StartOf(11)) {
			CODEINSTRUCTION_SC(out outObj, parent);
			TERMINATOR();
		} else if (StartOf(12)) {
			CODEINSTRUCTION_NSC(out outObj, parent);
		} else SynErr(63);
	}

	void AUTOVARIABLE(out pBaseLangObject outObj, pBaseLangObject parent, Encapsulation e = Encapsulation.NA) {
		var obj = new Variable(parent, la.col, la.line); obj.encapsulation = e; outObj = obj; pBaseLangObject blo; 
		Expect(33);
		obj.varType = new VarTypeObject(VarType.Auto); 
		IDENT(out blo, obj);
		try{ obj.Name = (Ident)blo;} catch (Exception ex) { SemErr(ex.Message); } 
	}

	void CODEINSTRUCTION_SC(out pBaseLangObject outObj, pBaseLangObject parent) {
		outObj = null; pBaseLangObject blo; 
		if (la.kind == 42) {
			OP_THROW(out outObj, parent);
		} else if (la.kind == 43) {
			OP_RETURN(out outObj, parent);
		} else if (peekCompare(_T_IDENT, _T_ROUNDBRACKETOPEN) ) {
			IDENT(out outObj, parent);
			BODY_FUNCTIONCALL(out blo, outObj);
			outObj.addChild(blo); 
		} else if (peekCompare(_T_IDENT, _T_ASSIGNMENTCHAR) ) {
			IDENT(out outObj, parent);
			BODY_ASSIGNMENT(out blo, outObj);
			outObj.addChild(blo); 
		} else if (peekCompare(_T_IDENT, _T_IDENT) ) {
			NEWVARIABLE(out outObj, parent);
			if (la.kind == 6) {
				BODY_ASSIGNMENT(out blo, outObj);
				outObj.addChild(blo); 
			}
		} else if (la.kind == 33) {
			AUTOVARIABLE(out outObj, parent);
			BODY_ASSIGNMENT(out blo, outObj);
			outObj.addChild(blo); 
		} else if (StartOf(2)) {
			EXPRESSION(out outObj, parent);
		} else SynErr(64);
	}

	void OP_THROW(out pBaseLangObject outObj, pBaseLangObject parent) {
		var obj = new Throw(parent); outObj = obj; pBaseLangObject blo; 
		Expect(42);
		EXPRESSION(out blo, obj);
		obj.addChild(blo); 
	}

	void OP_RETURN(out pBaseLangObject outObj, pBaseLangObject parent) {
		var obj = new Return(parent); outObj = obj; pBaseLangObject blo; 
		Expect(43);
		if (StartOf(2)) {
			EXPRESSION(out blo, obj);
			obj.addChild(blo); 
		}
	}

	void BODY_ASSIGNMENT(out pBaseLangObject outObj, pBaseLangObject parent) {
		var obj = new VariableAssignment(parent); outObj = obj; pBaseLangObject blo; 
		Expect(6);
		obj.operation = t.val; 
		EXPRESSION(out blo, obj);
		obj.addChild(blo); 
	}

	void CODEINSTRUCTION_NSC(out pBaseLangObject outObj, pBaseLangObject parent) {
		outObj = null; 
		if (la.kind == 34) {
			OP_FOR(out outObj, parent);
		} else if (la.kind == 35) {
			OP_WHILE(out outObj, parent);
		} else if (la.kind == 37) {
			OP_IFELSE(out outObj, parent);
		} else if (la.kind == 44) {
			OP_SWITCH(out outObj, parent);
		} else if (la.kind == 39) {
			OP_TRYCATCH(out outObj, parent);
		} else SynErr(65);
	}

	void OP_FOR(out pBaseLangObject outObj, pBaseLangObject parent) {
		var obj = new For(parent); outObj = obj; pBaseLangObject blo; 
		Expect(34);
		Expect(7);
		if (StartOf(11)) {
			CODEINSTRUCTION_SC(out blo, obj);
			obj.forArg1 = blo; 
		}
		TERMINATOR();
		if (StartOf(2)) {
			EXPRESSION(out blo, obj);
			obj.forArg2 = blo; 
		}
		TERMINATOR();
		if (StartOf(11)) {
			CODEINSTRUCTION_SC(out blo, obj);
			obj.forArg3 = blo; 
		}
		Expect(8);
		if (la.kind == 9) {
			Get();
			while (StartOf(13)) {
				if (StartOf(10)) {
					CODEINSTRUCTION(out blo, obj);
					obj.addChild(blo); 
				} else {
					OP_BREAK(out blo, obj);
					obj.addChild(blo); 
					TERMINATOR();
				}
			}
			Expect(10);
		} else if (StartOf(10)) {
			CODEINSTRUCTION(out blo, obj);
			obj.addChild(blo); 
		} else SynErr(66);
	}

	void OP_WHILE(out pBaseLangObject outObj, pBaseLangObject parent) {
		var obj = new While(parent); outObj = obj; pBaseLangObject blo; 
		Expect(35);
		Expect(7);
		EXPRESSION(out blo, obj);
		obj.expression = blo; 
		Expect(8);
		if (la.kind == 9) {
			Get();
			while (StartOf(13)) {
				if (StartOf(10)) {
					CODEINSTRUCTION(out blo, obj);
					obj.addChild(blo); 
				} else {
					OP_BREAK(out blo, obj);
					obj.addChild(blo); 
					TERMINATOR();
				}
			}
			Expect(10);
		} else if (StartOf(10)) {
			CODEINSTRUCTION(out blo, obj);
			obj.addChild(blo); 
		} else SynErr(67);
	}

	void OP_IFELSE(out pBaseLangObject outObj, pBaseLangObject parent) {
		var obj = new IfElse(parent); outObj = obj; pBaseLangObject blo; 
		Expect(37);
		Expect(7);
		EXPRESSION(out blo, obj);
		obj.expression = blo; 
		Expect(8);
		if (la.kind == 9) {
			Get();
			while (StartOf(10)) {
				CODEINSTRUCTION(out blo, obj);
				obj.addChild(blo); 
			}
			Expect(10);
		} else if (StartOf(10)) {
			CODEINSTRUCTION(out blo, obj);
			obj.addChild(blo); 
		} else SynErr(68);
		if (la.kind == 38) {
			Get();
			obj.markIfEnd(); 
			if (la.kind == 9) {
				Get();
				while (StartOf(10)) {
					CODEINSTRUCTION(out blo, obj);
					obj.addChild(blo); 
				}
				Expect(10);
			} else if (StartOf(10)) {
				CODEINSTRUCTION(out blo, obj);
				obj.addChild(blo); 
			} else SynErr(69);
		}
	}

	void OP_SWITCH(out pBaseLangObject outObj, pBaseLangObject parent) {
		var obj = new Switch(parent); Case caseObj; outObj = obj; pBaseLangObject blo; 
		Expect(44);
		Expect(7);
		EXPRESSION(out blo, obj);
		obj.addChild(blo); 
		Expect(8);
		Expect(9);
		while (la.kind == 45 || la.kind == 46 || la.kind == 47) {
			if (la.kind == 45) {
				Get();
				caseObj = new Case(obj); obj.addChild(caseObj); 
				EXPRESSION(out blo, obj);
				caseObj.expression = blo; 
				Expect(29);
				while (la.kind == 45) {
					Get();
					EXPRESSION(out blo, obj);
					caseObj.addChild(blo); 
					Expect(29);
				}
				while (StartOf(10)) {
					CODEINSTRUCTION(out blo, obj);
					caseObj.addChild(blo); 
				}
				if (la.kind == 41) {
					OP_BREAK(out blo, obj);
					caseObj.endOfCase = blo; 
					TERMINATOR();
				} else if (la.kind == 42) {
					OP_THROW(out blo, obj);
					caseObj.endOfCase = blo; 
					TERMINATOR();
				} else if (la.kind == 43) {
					OP_RETURN(out blo, obj);
					caseObj.endOfCase = blo; 
					TERMINATOR();
				} else SynErr(70);
			} else {
				if (la.kind == 46) {
					Get();
					caseObj = new Case(obj); obj.addChild(caseObj); caseObj.expression = new Ident(caseObj, "default", t.line, t.col); 
					Expect(29);
				} else {
					Get();
					caseObj = new Case(obj); obj.addChild(caseObj); caseObj.expression = new Ident(caseObj, "default", t.line, t.col); 
				}
				while (StartOf(10)) {
					CODEINSTRUCTION(out blo, obj);
					caseObj.addChild(blo); 
				}
				if (la.kind == 41) {
					OP_BREAK(out blo, obj);
					caseObj.endOfCase = blo; 
					TERMINATOR();
				} else if (la.kind == 42) {
					OP_THROW(out blo, obj);
					caseObj.endOfCase = blo; 
					TERMINATOR();
				} else if (la.kind == 43) {
					OP_RETURN(out blo, obj);
					caseObj.endOfCase = blo; 
					TERMINATOR();
				} else SynErr(71);
			}
		}
		Expect(10);
	}

	void OP_TRYCATCH(out pBaseLangObject outObj, pBaseLangObject parent) {
		var obj = new TryCatch(parent); outObj = obj; pBaseLangObject blo; 
		Expect(39);
		Expect(9);
		while (StartOf(10)) {
			CODEINSTRUCTION(out blo, obj);
			obj.addChild(blo); 
		}
		Expect(10);
		Expect(40);
		Expect(7);
		NEWVARIABLE(out blo, obj);
		obj.variable = blo; 
		Expect(8);
		obj.markIfEnd(); 
		Expect(9);
		while (StartOf(10)) {
			CODEINSTRUCTION(out blo, obj);
			obj.addChild(blo); 
		}
		Expect(10);
	}

	void OP_BREAK(out pBaseLangObject outObj, pBaseLangObject parent) {
		var obj = new Break(parent); outObj = obj; pBaseLangObject blo; 
		Expect(41);
	}



	public void Parse() {
		la = new Token();
		la.val = "";		
		Get();
		OOS();
		Expect(0);

	}
	
	static readonly bool[,] set = {
		{_T,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x},
		{_x,_T,_T,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_T,_T,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x},
		{_x,_T,_T,_T, _x,_x,_x,_T, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_T,_T,_T, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _T,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _T,_x,_x},
		{_x,_T,_T,_T, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_T,_T,_T, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _T,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _T,_x,_x},
		{_x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_T,_T, _T,_x,_x,_T, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x},
		{_x,_x,_x,_T, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_T,_T, _T,_T,_T,_T, _T,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _T,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x},
		{_x,_x,_x,_T, _x,_x,_x,_x, _x,_x,_x,_T, _T,_T,_T,_T, _T,_T,_T,_T, _T,_x,_x,_x, _x,_x,_T,_x, _x,_x,_x,_x, _T,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x},
		{_x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_T, _T,_T,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_T,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x},
		{_x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_T,_T, _T,_T,_T,_T, _T,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x},
		{_x,_x,_x,_T, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_T,_T, _T,_T,_T,_T, _T,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x},
		{_x,_T,_T,_T, _x,_x,_x,_T, _x,_x,_x,_x, _x,_x,_T,_T, _T,_T,_T,_T, _T,_T,_T,_T, _x,_x,_x,_x, _x,_x,_x,_x, _x,_T,_T,_T, _T,_T,_x,_T, _x,_x,_T,_T, _T,_x,_x,_x, _T,_x,_x},
		{_x,_T,_T,_T, _x,_x,_x,_T, _x,_x,_x,_x, _x,_x,_T,_T, _T,_T,_T,_T, _T,_T,_T,_T, _x,_x,_x,_x, _x,_x,_x,_x, _x,_T,_x,_x, _T,_x,_x,_x, _x,_x,_T,_T, _x,_x,_x,_x, _T,_x,_x},
		{_x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_T,_T, _x,_T,_x,_T, _x,_x,_x,_x, _T,_x,_x,_x, _x,_x,_x},
		{_x,_T,_T,_T, _x,_x,_x,_T, _x,_x,_x,_x, _x,_x,_T,_T, _T,_T,_T,_T, _T,_T,_T,_T, _x,_x,_x,_x, _x,_x,_x,_x, _x,_T,_T,_T, _T,_T,_x,_T, _x,_T,_T,_T, _T,_x,_x,_x, _T,_x,_x}

	};
} // end Parser


public class Errors {
	public int count = 0;                                    // number of errors detected
	public System.IO.TextWriter errorStream = Console.Out;   // error messages go to this stream
	public string errMsgFormat = "line {0} col {1}: {2}"; // 0=line, 1=column, 2=text
